# Where-is-the-power

./: .gitignore  .gitmodules  Dockerfile  README.md  WhatWeDid.md
.aws/: task-definition.json
.github/: codecov.yml
.github/workflows/: app-test.yml  aws_dev.yml  aws_prod.yml  codecov.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase_dev.yml  firebase_prod.yml  gh_pages_dev.yml  rust.yml
api/: .env.template  .gitignore  Cargo.toml  Rocket.toml  build.rs  publicKey.pem  test_pk.pem  test_sk.pem
api/api-docs/: openapi.json
api/macros/: Cargo.toml
api/macros/src/: lib.rs
api/scripts/: fetchstatstest.py  findRobots.py  mapdatatest.py  output.json  polyrobots.json  robots.py  robots.txt  test.py  tshwane_cords.json
api/src/: ai.rs  api.rs  auth.rs  avoid_cords.py  db.rs  dns.rs  loadshedding.rs  main.rs  playground.py  reporting.rs  robots.json  route.py  scraper.rs  tests.rs  user.rs
api/src/parsers/: tshwane_scraper.rs
api/src/scrapers/: mod.rs  scraper.rs  tshwane_scraper.rs
api/src/scrapers/pythonScrappers/: config.py  requirements.txt  tshwane_data_scraper.py
app/WhereIsThePower/: .firebaserc  angular.json  capacitor.config.json  capacitor.config.ts  cypress.config.ts  firebase.json  ionic.config.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
app/WhereIsThePower/.firebase/: hosting.d3d3.cache
app/WhereIsThePower/android/: capacitor.settings.gradle
app/WhereIsThePower/android/app/: capacitor.build.gradle
app/WhereIsThePower/cypress/: tsconfig.json
app/WhereIsThePower/cypress/e2e/: desktop.cy.ts  mobile.cy.ts  spec.cy.ts
app/WhereIsThePower/src/: global.scss  index.html
app/WhereIsThePower/src/app/: app-routing.module.ts  app.component.html  (+5 more)
(+90 files in other folders)
