[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fern = "0.6.2"
humantime = "2.1.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
scraper = "0.16.0"
lazy_static = "1.4.0"
calamine = "0.21.1"
tempfile = "3.2"
mongodb = "2.5.0"
rocket = { version = "=0.5.0-rc.3", features = ["json", "default", "tls"] }
serde = { version = "1.0.162", features = ["derive"] }
macros = { path = "macros" }
async-trait = "0.1.68"
bson = "2.6.1"
dotenvy = "0.15.7"
tokio = "1.28.0"

[build-dependencies]
copy_dir = "0.1.2"
